--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>EBS Entry v0-100</title>
+    <title>EBS Entry v0-101</title>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script src="https://apis.google.com/js/api.js" async defer></script>
     <style>
@@ -27,7 +27,6 @@
         .total-val { font-size: 1.3rem; font-weight: bold; color: var(--accent); }
         .actions { display: grid; grid-template-columns: 1fr 1fr 1.2fr; gap: 8px; }
         button { padding: 10px; border: none; border-radius: 6px; font-weight: bold; cursor: pointer; color: white; font-size: 0.72rem; }
-        button:disabled { background: #bdc3c7 !important; cursor: not-allowed; }
         .btn-save { background: var(--accent); }
         .btn-sync { background: var(--bridge); }
         .btn-wipe { background: var(--danger); opacity: 0.85; }
@@ -39,17 +38,17 @@
         .w-grp { width: 35px; } .w-fu { width: 22px; } .w-date { width: 68px; } .w-type { width: 32px; }
         .w-cat, .w-acc { width: 110px; } .w-tiny { width: 15px; text-align: center; }
         .w-sort { width: 15px; text-align: center; } 
-        .w-tot { width: 45px; text-align: right; }
+        .w-tot { width: 75px; text-align: right; } /* Widened for 10M v0-101 */
         .txt-center { text-align: center !important; }
     </style>
 </head>
 <body>
 <div class="container">
     <div class="header-wrap">
-        <h3>Excel Budget Sheet input <span class="ver-tag">(v0-100)</span></h3>
+        <h3>Excel Budget Sheet input <span class="ver-tag">(v0-101)</span></h3>
         <button class="btn-lookup" onclick="initRefresh()">Refresh<br>Lookups</button>
     </div>
-    <div id="auth_status">Bridge Status: Initializing...</div>
+    <div id="auth_status">iOS Sync Status: Idle (Tap Refresh to Login)</div>
     <div class="grid-top">
         <div><label>F/U</label><select id="colB" onchange="handleManualFU()"></select></div>
         <div><label>Grouping</label><select id="colA"></select></div>
@@ -79,7 +78,7 @@
     <div class="total-box"><label>Total</label><div class="total-val"><span id="symbol">£</span> <span id="totalDisp">0.00</span></div></div>
     <div class="actions">
         <button class="btn-save" onclick="saveRow()">Stage Entry</button>
-        <button class="btn-sync" id="sync_btn" onclick="handleSync()" disabled>Send to Sheets</button>
+        <button class="btn-sync" id="sync_btn" onclick="handleSync()">Send to Sheets</button>
         <button id="wipeBtn" class="btn-wipe" onclick="clearData()">Wipe Local (2 clicks)</button>
     </div>
     <div class="preview-wrap" id="previewArea"></div>
@@ -87,9 +86,8 @@
 </div>
 <script>
     const SHEET_ID = '1DdjG4B8wB9llk7yOoRRO72G0XqHEgFkMIlLuusShA6E';
-    const VER = "Excel Budget Sheet input (v0-100)";
-    let AA_LIST = [], coordinateMap = {};
-    const symbols = { "GBP": "£", "EUR": "€", "USD": "$", "ZAR": "R", "CHF": "Fr", "THB": "฿", "RUR": "₽", "COP": "COL$" };
+    const VER = "Excel Budget Sheet input (v0-101)";
+    let AA_LIST = [], coordinateMap = {}, symbols = { "GBP": "£", "EUR": "€", "USD": "$", "ZAR": "R", "CHF": "Fr", "THB": "฿", "RUR": "₽", "COP": "COL$" };
     let tokenClient, gapiInited = false, gsiInited = false, wipeConfirmed = false;
 
     function colToIndex(col) {
@@ -98,24 +96,24 @@
         return idx - 1;
     }
 
-    function gapiLoaded() { gapi.load('client', async () => { await gapi.client.init({ apiKey: 'AIzaSyDvZ1XZw5bZgWSB9zaU7h9Vtn7MhDGFMSM' }); await gapi.client.load('sheets', 'v4'); gapiInited = true; checkReady(); }); }
-    function gisLoaded() { tokenClient = google.accounts.oauth2.initTokenClient({ client_id: '23231735212-jtgur3sn2ndh798ke00pm2a1d5rkd4eu.apps.googleusercontent.com', scope: 'https://www.googleapis.com/auth/spreadsheets', callback: '' }); gsiInited = true; checkReady(); }
-    function checkReady() { if (gapiInited && gsiInited) { document.getElementById('auth_status').innerText = "Bridge Status: Active and Ready"; document.getElementById('sync_btn').disabled = false; initRefresh(true); } }
+    function gapiLoaded() { gapi.load('client', async () => { await gapi.client.init({ apiKey: 'AIzaSyDvZ1XZw5bZgWSB9zaU7h9Vtn7MhDGFMSM' }); await gapi.client.load('sheets', 'v4'); gapiInited = true; }); }
+    function gisLoaded() { tokenClient = google.accounts.oauth2.initTokenClient({ client_id: '23231735212-jtgur3sn2ndh798ke00pm2a1d5rkd4eu.apps.googleusercontent.com', scope: 'https://www.googleapis.com/auth/spreadsheets', callback: '' }); gsiInited = true; }
 
-    function initRefresh(silent = false) {
-        tokenClient.callback = async (resp) => { if (resp.access_token) fetchLookupRefs(silent); };
+    function initRefresh() {
+        document.getElementById('auth_status').innerText = "Requesting Login...";
+        tokenClient.callback = async (resp) => { if (resp.access_token) fetchLookupRefs(); };
         tokenClient.requestAccessToken();
     }
 
-    async function fetchLookupRefs(silent) {
+    async function fetchLookupRefs() {
         try {
             const res = await gapi.client.sheets.spreadsheets.values.get({ spreadsheetId: SHEET_ID, range: 'LookupRefs!A2:C15' });
             res.result.values.forEach(r => { coordinateMap[r[0]] = { val: colToIndex(r[1]), desc: (r[2] && r[2].toLowerCase() !== 'n/a') ? colToIndex(r[2]) : null }; });
-            fetchActualData(silent);
-        } catch (e) { console.error(e); }
+            fetchActualData();
+        } catch (e) { document.getElementById('auth_status').innerText = "Auth Error."; }
     }
 
-    async function fetchActualData(silent) {
+    async function fetchActualData() {
         try {
             const res = await gapi.client.sheets.spreadsheets.values.get({ spreadsheetId: SHEET_ID, range: 'Lookups!A2:AC1000' });
             const data = res.result.values;
@@ -131,11 +129,9 @@
             pop('colFreq', 'Frequency', 'A'); pop('colStatus', 'Status', 'N'); pop('colZ', 'Month', 'NEW'); pop('colX', 'Currency', 'GBP');
             AA_LIST = data.filter(r => r[coordinateMap['From'].val]).map(r => r[coordinateMap['From'].val]);
             ['colT', 'colV', 'colG', 'colK'].forEach(id => document.getElementById(id).value = "");
-            document.getElementById('colM').value = "1";
-            document.getElementById('workTypeDisplay').innerText = "--";
-            calc();
-            if(!silent) alert("Lookups Refreshed!");
-        } catch (e) { console.error(e); }
+            document.getElementById('colM').value = "1"; document.getElementById('workTypeDisplay').innerText = "--";
+            calc(); document.getElementById('auth_status').innerText = "Ready - Bridge Active";
+        } catch (e) { document.getElementById('auth_status').innerText = "Data Fetch Error."; }
     }
 
     function handleAccTrigger() {
@@ -156,9 +152,7 @@
 
     function handleCatTrigger() {
         const f = document.getElementById('colF').value, fu = document.getElementById('colB');
-        if (f.toLowerCase().includes("support")) { 
-            const s = Array.from(fu.options).find(o => o.value.startsWith('S')); if(s) fu.value = s.value; 
-        }
+        if (f.toLowerCase().includes("support")) { const s = Array.from(fu.options).find(o => o.value.startsWith('S')); if(s) fu.value = s.value; }
     }
 
     function handleManualFU() { if(document.getElementById('colB').value.startsWith('xf')) document.getElementById('colF').value = "Transfer"; }
@@ -177,7 +171,7 @@
     function calc() {
         const t = parseFloat(document.getElementById('colT').value)||0, u = parseFloat(document.getElementById('colM').value)||1, v = parseFloat(document.getElementById('colV').value)||0;
         const tot = ((t * u) + v).toFixed(2);
-        const curValue = document.getElementById('colX').value; const curCode = curValue ? curValue.split(' - ')[0] : 'GBP';
+        const curCode = document.getElementById('colX').value.split(' - ')[0] || 'GBP';
         document.getElementById('symbol').innerText = symbols[curCode]||"£";
         document.getElementById('totalDisp').innerText = tot; return tot;
     }
