--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>EBS Entry v0-101</title>
+    <title>EBS Entry v0-102</title>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script src="https://apis.google.com/js/api.js" async defer></script>
     <style>
@@ -38,14 +38,14 @@
         .w-grp { width: 35px; } .w-fu { width: 22px; } .w-date { width: 68px; } .w-type { width: 32px; }
         .w-cat, .w-acc { width: 110px; } .w-tiny { width: 15px; text-align: center; }
         .w-sort { width: 15px; text-align: center; } 
-        .w-tot { width: 75px; text-align: right; } /* Widened for 10M v0-101 */
+        .w-tot { width: 75px; text-align: right; }
         .txt-center { text-align: center !important; }
     </style>
 </head>
 <body>
 <div class="container">
     <div class="header-wrap">
-        <h3>Excel Budget Sheet input <span class="ver-tag">(v0-101)</span></h3>
+        <h3>Excel Budget Sheet input <span class="ver-tag">(v0-102)</span></h3>
         <button class="btn-lookup" onclick="initRefresh()">Refresh<br>Lookups</button>
     </div>
     <div id="auth_status">iOS Sync Status: Idle (Tap Refresh to Login)</div>
@@ -86,7 +86,7 @@
 </div>
 <script>
     const SHEET_ID = '1DdjG4B8wB9llk7yOoRRO72G0XqHEgFkMIlLuusShA6E';
-    const VER = "Excel Budget Sheet input (v0-101)";
+    const VER = "Excel Budget Sheet input (v0-102)";
     let AA_LIST = [], coordinateMap = {}, symbols = { "GBP": "£", "EUR": "€", "USD": "$", "ZAR": "R", "CHF": "Fr", "THB": "฿", "RUR": "₽", "COP": "COL$" };
     let tokenClient, gapiInited = false, gsiInited = false, wipeConfirmed = false;
 
@@ -109,8 +109,16 @@
         try {
             const res = await gapi.client.sheets.spreadsheets.values.get({ spreadsheetId: SHEET_ID, range: 'LookupRefs!A2:C15' });
             res.result.values.forEach(r => { coordinateMap[r[0]] = { val: colToIndex(r[1]), desc: (r[2] && r[2].toLowerCase() !== 'n/a') ? colToIndex(r[2]) : null }; });
-            fetchActualData();
+            fetchActiveAccounts();
         } catch (e) { document.getElementById('auth_status').innerText = "Auth Error."; }
+    }
+
+    async function fetchActiveAccounts() {
+        try {
+            const res = await gapi.client.sheets.spreadsheets.values.get({ spreadsheetId: SHEET_ID, range: 'ActiveAccounts!A2:A500' });
+            AA_LIST = res.result.values ? res.result.values.flat().filter(v => v) : [];
+            fetchActualData();
+        } catch (e) { document.getElementById('auth_status').innerText = "ActiveAccounts Fetch Error."; }
     }
 
     async function fetchActualData() {
@@ -127,7 +135,6 @@
             pop('colA', 'Grouping', 'Roy'); pop('colB', 'F/U', 'v'); pop('colF', 'Category', null, '--Select--');
             pop('colH', 'From', null, '--Select--'); pop('colI', 'To', null, '--Select--');
             pop('colFreq', 'Frequency', 'A'); pop('colStatus', 'Status', 'N'); pop('colZ', 'Month', 'NEW'); pop('colX', 'Currency', 'GBP');
-            AA_LIST = data.filter(r => r[coordinateMap['From'].val]).map(r => r[coordinateMap['From'].val]);
             ['colT', 'colV', 'colG', 'colK'].forEach(id => document.getElementById(id).value = "");
             document.getElementById('colM').value = "1"; document.getElementById('workTypeDisplay').innerText = "--";
             calc(); document.getElementById('auth_status').innerText = "Ready - Bridge Active";
@@ -171,7 +178,7 @@
     function calc() {
         const t = parseFloat(document.getElementById('colT').value)||0, u = parseFloat(document.getElementById('colM').value)||1, v = parseFloat(document.getElementById('colV').value)||0;
         const tot = ((t * u) + v).toFixed(2);
-        const curCode = document.getElementById('colX').value.split(' - ')[0] || 'GBP';
+        const curValue = document.getElementById('colX').value; const curCode = curValue ? curValue.split(' - ')[0] : 'GBP';
         document.getElementById('symbol').innerText = symbols[curCode]||"£";
         document.getElementById('totalDisp').innerText = tot; return tot;
     }
