--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>EBS Entry v0-102</title>
+    <title>EBS Entry v0-104</title>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script src="https://apis.google.com/js/api.js" async defer></script>
     <style>
@@ -45,7 +45,7 @@
 <body>
 <div class="container">
     <div class="header-wrap">
-        <h3>Excel Budget Sheet input <span class="ver-tag">(v0-102)</span></h3>
+        <h3>Excel Budget Sheet input <span class="ver-tag">(v0-104)</span></h3>
         <button class="btn-lookup" onclick="initRefresh()">Refresh<br>Lookups</button>
     </div>
     <div id="auth_status">iOS Sync Status: Idle (Tap Refresh to Login)</div>
@@ -86,7 +86,7 @@
 </div>
 <script>
     const SHEET_ID = '1DdjG4B8wB9llk7yOoRRO72G0XqHEgFkMIlLuusShA6E';
-    const VER = "Excel Budget Sheet input (v0-102)";
+    const VER = "Excel Budget Sheet input (v0-104)";
     let AA_LIST = [], coordinateMap = {}, symbols = { "GBP": "£", "EUR": "€", "USD": "$", "ZAR": "R", "CHF": "Fr", "THB": "฿", "RUR": "₽", "COP": "COL$" };
     let tokenClient, gapiInited = false, gsiInited = false, wipeConfirmed = false;
 
@@ -118,7 +118,7 @@
             const res = await gapi.client.sheets.spreadsheets.values.get({ spreadsheetId: SHEET_ID, range: 'ActiveAccounts!A2:A500' });
             AA_LIST = res.result.values ? res.result.values.flat().filter(v => v) : [];
             fetchActualData();
-        } catch (e) { document.getElementById('auth_status').innerText = "ActiveAccounts Fetch Error."; }
+        } catch (e) { document.getElementById('auth_status').innerText = "ActiveAccounts Error."; }
     }
 
     async function fetchActualData() {
