--- a/index.html
+++ b/index.html
@@ -3,17 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>EBS Entry v0-104</title>
+    <title>EBS Entry v0-105</title>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script src="https://apis.google.com/js/api.js" async defer></script>
     <style>
         :root { --primary: #2c3e50; --accent: #27ae60; --danger: #c0392b; --bg: #f8f9fa; --bridge: #2980b9; }
         body { font-family: -apple-system, sans-serif; background: var(--bg); margin: 0; padding: 10px; }
         .container { max-width: 950px; margin: auto; background: white; padding: 15px; border-radius: 12px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); }
-        .header-wrap { display: flex; justify-content: space-between; align-items: center; margin-bottom: 15px; }
-        h3 { margin: 0; font-weight: bold; }
-        .ver-tag { font-weight: normal; font-size: 0.9rem; }
-        .btn-lookup { background: var(--bridge); padding: 4px 8px; font-size: 0.7rem; border-radius: 6px; border: none; color: white; cursor: pointer; font-weight: bold; width: 60px; line-height: 1.1; text-align: center; }
+        .header-wrap { display: flex; justify-content: space-between; align-items: center; margin-bottom: 15px; gap: 10px; }
+        h3 { margin: 0; font-weight: bold; flex-grow: 1; font-size: 1.1rem; }
+        .ver-tag { font-weight: normal; font-size: 0.8rem; }
+        .header-btns { display: flex; gap: 8px; }
+        .btn-lookup { background: var(--bridge); padding: 4px; font-size: 0.7rem; border-radius: 6px; border: none; color: white; cursor: pointer; font-weight: bold; width: 65px; height: 35px; line-height: 1.1; text-align: center; }
+        .btn-reset-ui { background: #7f8c8d; }
         .grid-top { display: grid; grid-template-columns: 0.8fr 1fr 1.2fr; gap: 10px; }
         .grid-cat { display: grid; grid-template-columns: 1fr 0.4fr 0.3fr; gap: 10px; margin-top: 10px; }
         .grid-acc { display: grid; grid-template-columns: 1fr 1fr; gap: 10px; margin-top: 10px; }
@@ -39,14 +41,16 @@
         .w-cat, .w-acc { width: 110px; } .w-tiny { width: 15px; text-align: center; }
         .w-sort { width: 15px; text-align: center; } 
         .w-tot { width: 75px; text-align: right; }
-        .txt-center { text-align: center !important; }
     </style>
 </head>
 <body>
 <div class="container">
     <div class="header-wrap">
-        <h3>Excel Budget Sheet input <span class="ver-tag">(v0-104)</span></h3>
-        <button class="btn-lookup" onclick="initRefresh()">Refresh<br>Lookups</button>
+        <h3>EBS input <span class="ver-tag">(v0-105)</span></h3>
+        <div class="header-btns">
+            <button class="btn-lookup" onclick="initRefresh()">Refresh<br>Lookups</button>
+            <button class="btn-lookup btn-reset-ui" onclick="localReset()">Reset<br>fields</button>
+        </div>
     </div>
     <div id="auth_status">iOS Sync Status: Idle (Tap Refresh to Login)</div>
     <div class="grid-top">
@@ -86,7 +90,7 @@
 </div>
 <script>
     const SHEET_ID = '1DdjG4B8wB9llk7yOoRRO72G0XqHEgFkMIlLuusShA6E';
-    const VER = "Excel Budget Sheet input (v0-104)";
+    const VER = "Excel Budget Sheet input (v0-105)";
     let AA_LIST = [], coordinateMap = {}, symbols = { "GBP": "£", "EUR": "€", "USD": "$", "ZAR": "R", "CHF": "Fr", "THB": "฿", "RUR": "₽", "COP": "COL$" };
     let tokenClient, gapiInited = false, gsiInited = false, wipeConfirmed = false;
 
@@ -105,6 +109,22 @@
         tokenClient.requestAccessToken();
     }
 
+    function localReset() {
+        const resetSel = (id, def) => {
+            const s = document.getElementById(id); if(!s) return;
+            if(def) { const opt = Array.from(s.options).find(o => o.value.startsWith(def)); if(opt) s.value = opt.value; }
+            else s.selectedIndex = 0;
+        };
+        resetSel('colA', 'Roy'); resetSel('colB', 'v'); resetSel('colF', null);
+        resetSel('colH', null); resetSel('colI', null); resetSel('colFreq', 'A');
+        resetSel('colStatus', 'N'); resetSel('colZ', 'NEW'); resetSel('colX', 'GBP');
+        ['colT', 'colV', 'colG', 'colK'].forEach(id => document.getElementById(id).value = "");
+        document.getElementById('colM').value = "1";
+        document.getElementById('workTypeDisplay').innerText = "--";
+        document.getElementById('bgTypeE').value = "--";
+        calc();
+    }
+
     async function fetchLookupRefs() {
         try {
             const res = await gapi.client.sheets.spreadsheets.values.get({ spreadsheetId: SHEET_ID, range: 'LookupRefs!A2:C15' });
@@ -118,7 +138,7 @@
             const res = await gapi.client.sheets.spreadsheets.values.get({ spreadsheetId: SHEET_ID, range: 'ActiveAccounts!A2:A500' });
             AA_LIST = res.result.values ? res.result.values.flat().filter(v => v) : [];
             fetchActualData();
-        } catch (e) { document.getElementById('auth_status').innerText = "ActiveAccounts Error."; }
+        } catch (e) { document.getElementById('auth_status').innerText = "AA List Fetch Error."; }
     }
 
     async function fetchActualData() {
@@ -135,9 +155,8 @@
             pop('colA', 'Grouping', 'Roy'); pop('colB', 'F/U', 'v'); pop('colF', 'Category', null, '--Select--');
             pop('colH', 'From', null, '--Select--'); pop('colI', 'To', null, '--Select--');
             pop('colFreq', 'Frequency', 'A'); pop('colStatus', 'Status', 'N'); pop('colZ', 'Month', 'NEW'); pop('colX', 'Currency', 'GBP');
-            ['colT', 'colV', 'colG', 'colK'].forEach(id => document.getElementById(id).value = "");
-            document.getElementById('colM').value = "1"; document.getElementById('workTypeDisplay').innerText = "--";
-            calc(); document.getElementById('auth_status').innerText = "Ready - Bridge Active";
+            localReset();
+            document.getElementById('auth_status').innerText = "Ready - Bridge Active";
         } catch (e) { document.getElementById('auth_status').innerText = "Data Fetch Error."; }
     }
 
@@ -188,8 +207,7 @@
         if (!fv || !hv || !iv || fv.includes("--") || hv.includes("--") || iv.includes("--")) { alert("Category and Accounts required."); return; }
         const row = [document.getElementById('colA').value, document.getElementById('colB').value.split(' - ')[0], document.getElementById('colC').value, "", document.getElementById('bgTypeE').value, document.getElementById('colF').value.split(' - ')[0], document.getElementById('colG').value, document.getElementById('colH').value, document.getElementById('colI').value, "", document.getElementById('colK').value, document.getElementById('colFreq').value.split(' - ')[0], "", "", document.getElementById('colStatus').value.split(' - ')[0], "", "", "", "", parseFloat(document.getElementById('colT').value||0).toFixed(2), document.getElementById('colM').value, parseFloat(document.getElementById('colV').value||0).toFixed(2), calc(), document.getElementById('colX').value.split(' - ')[0], "", document.getElementById('colZ').value, VER];
         let data = JSON.parse(localStorage.getItem('ebs_trf') || '[]'); data.push(row); localStorage.setItem('ebs_trf', JSON.stringify(data));
-        ['colT', 'colV', 'colG', 'colK'].forEach(id => document.getElementById(id).value = "");
-        document.getElementById('colM').value = "1"; calc(); renderPreview();
+        localReset(); renderPreview();
     }
 
     function renderPreview() {
