--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>EBS Entry v0-111</title>
+    <title>EBS Entry v0-112</title>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script src="https://apis.google.com/js/api.js" async defer></script>
     <style>
@@ -45,7 +45,7 @@
 <body>
 <div class="container">
     <div class="header-wrap">
-        <h3>EBS input <span class="ver-tag">(v0-111)</span></h3>
+        <h3>EBS input <span class="ver-tag">(v0-112)</span></h3>
         <div class="header-btns">
             <button class="btn-lookup" onclick="initRefresh()">Refresh<br>Lookups</button>
             <button class="btn-lookup btn-reset-ui" onclick="localReset()">Reset<br>fields</button>
@@ -90,7 +90,7 @@
 
 <script>
     const SHEET_ID = '1DdjG4B8wB9llk7yOoRRO72G0XqHEgFkMIlLuusShA6E';
-    const VER = "Excel Budget Sheet input (v0-111)";
+    const VER = "Excel Budget Sheet input (v0-112)";
     let AA_LIST = [], coordinateMap = {}, symbols = { "GBP": "£", "EUR": "€", "USD": "$", "ZAR": "R", "CHF": "Fr", "THB": "฿", "RUR": "₽", "COP": "COL$" };
     let tokenClient, gapiInited = false, gsiInited = false, wipeConfirmed = false;
 
@@ -202,12 +202,11 @@
     function saveRow() {
         const fv = document.getElementById('colF').value, hv = document.getElementById('colH').value, iv = document.getElementById('colI').value;
         if (!fv || !hv || !iv || fv.includes("--") || hv.includes("--") || iv.includes("--")) { alert("Category and Accounts required."); return; }
-        
         let whoVal = ""; if (fv.startsWith('S')) whoVal = document.getElementById('colA').value;
 
-        // Correct 35-column structure starting at index 0 (Col A)
+        // Strict 35-index array to ensure Column A is the anchor
         const row = Array(35).fill("");
-        row[0] = document.getElementById('colA').value;
+        row[0] = document.getElementById('colA').value; // Col A
         row[1] = document.getElementById('colB').value.split(' - ')[0];
         row[2] = document.getElementById('colC').value;
         row[4] = document.getElementById('bgTypeE').value;
@@ -224,8 +223,8 @@
         row[22] = calc();
         row[23] = document.getElementById('colX').value.split(' - ')[0];
         row[25] = document.getElementById('colZ').value;
-        row[33] = whoVal; // Column AH
-        row[34] = VER;   // Column AI
+        row[33] = whoVal; // Col AH
+        row[34] = VER;   // Col AI
         
         let data = JSON.parse(localStorage.getItem('ebs_trf') || '[]'); data.push(row); localStorage.setItem('ebs_trf', JSON.stringify(data));
         ['colT', 'colV', 'colG', 'colK'].forEach(id => document.getElementById(id).value = "");
@@ -248,7 +247,11 @@
         const data = JSON.parse(localStorage.getItem('ebs_trf') || '[]'); if (!data.length) return;
         tokenClient.callback = async (resp) => {
             const vals = data.map(r => { let rc = [...r]; const dP = rc[2].split('-'); rc[2] = `${dP[2]}/${dP[1]}/${dP[0]}`; [19, 21, 22].forEach(i => rc[i] = parseFloat(rc[i] || 0)); return rc; });
-            try { await gapi.client.sheets.spreadsheets.values.append({ spreadsheetId: SHEET_ID, range: 'EBSinput!A:AI', valueInputOption: 'USER_ENTERED', resource: { values: vals } }); alert("Success!"); renderPreview(); } catch (e) { alert("Sync Error."); }
+            try { 
+                // Hardened explicit range anchor v0-112
+                await gapi.client.sheets.spreadsheets.values.append({ spreadsheetId: SHEET_ID, range: "'EBSinput'!A:AI", valueInputOption: 'USER_ENTERED', resource: { values: vals } }); 
+                alert("Success!"); renderPreview(); 
+            } catch (e) { alert("Sync Error."); }
         };
         tokenClient.requestAccessToken();
     }
